# stall-mate

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: classification.yaml  models.yaml
configs/experiments/: phase1_1.yaml  phase1_2.yaml  phase1_3.yaml  phase1_5.yaml
configs/experiments/phase2/: 2_A1.yaml  2_A2.yaml  2_A3.yaml  2_A4.yaml  2_A5.yaml  2_A6.yaml  2_B1.yaml  2_B2.yaml  2_B3.yaml  2_B4.yaml  2_B5.yaml  2_C1.yaml  2_C2.yaml  2_C3.yaml  2_D1.yaml  2_D2.yaml  2_D3.yaml  2_D4.yaml  2_E1.yaml  2_E2.yaml  2_E3.yaml  2_E4.yaml  2_X1.yaml  2_X2.yaml  2_X3.yaml  2_X4.yaml
configs/prompt_templates/: phase1.yaml  phase1_cot.yaml  phase2.yaml
docs/: architecture.md  cshda_code_structure.md  idea.md  our_method.md
scripts/: analyze_phase1.py  demo_cshda.py  run_phase1.sh  run_phase1_5.py  run_phase2.py  verify_10calls.py
src/stall_mate/: __init__.py
src/stall_mate/analysis/: __init__.py  loader.py  metrics.py  report.py  visualize.py
src/stall_mate/client/: __init__.py  llm_client.py
src/stall_mate/config/: __init__.py  loader.py
src/stall_mate/cshda/: __init__.py  engine.py
src/stall_mate/cshda/layer1_extraction/: prompts.py  (+2 more)
src/stall_mate/prompt/: __init__.py  builder.py  phase2_builder.py
src/stall_mate/recorder/: __init__.py  jsonl.py
src/stall_mate/runner/: __init__.py  display.py  experiment.py
src/stall_mate/schema/: __init__.py  stall_choice.py
src/stall_mate/types/: __init__.py  record.py
tests/: conftest.py  test_client.py  test_config.py  test_prompt.py  test_recorder.py  test_runner.py  test_schema.py  test_types.py
(+17 files in other folders)
